# RaspberryPiSystem_001

./: .gitignore  AGENTS.md  README.md
client_window_a/: README.md  SUPPLEMENTS.md  jest.config.ts  package-lock.json  package.json
config/: config.json
docs/: architecture.md  test-handbook.md
document_viewer/: .gitignore  CHANGELOG.md  README.md
handheld/: README.md  (+1 more)
server/: README.md  docker-compose.yml  pyproject.toml
server/config/: default.toml  local.toml  logistics-jobs.sample.json  production-plan.sample.json  schema.sql  standard-times.sample.json
server/scripts/: bootstrap_venv.sh  drain_backlog.py  init_db.sh  seed_backlog.py  seed_plan_tables.py  smoke_scan.sh
server/src/raspberrypiserver/: app.py
server/src/raspberrypiserver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/src/raspberrypiserver/api/: __init__.py  logistics.py  maintenance.py  part_locations.py  production.py  scans.py  tool_management.py
server/src/raspberrypiserver/providers/: __init__.py  logistics.py  plan.py
server/src/raspberrypiserver/repositories/: __init__.py  part_locations.py  scans.py
server/src/raspberrypiserver/services/: __init__.py  backlog.py  broadcast.py  tool_management.py
server/tests/: conftest.py  test_api_logistics.py  test_api_maintenance.py  test_api_part_locations.py  test_api_production.py  test_api_scans.py  test_api_tool_management.py  test_backlog_service.py  test_broadcast_service.py  test_healthz.py  test_logging_config.py  test_repositories.py
server/tests/db/: test_backlog_drain.sql
(+129 files in other folders)
