[project]
name = "raspberrypiserver"
version = "0.1.0"
description = "Modular Raspberry Pi 5 server for tool management system rearchitecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
raspberrypiserver = "raspberrypiserver.app:run"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
